Add tests for each linter (#133)
* Refactor light test framework

* Add test method

* Remove name of results

* Add more test framework methods

* Remove unused mocking method